Added testing. Improved documentation.
Signed-off-by: Yordan Tsintsov <yordan.tsintsov@redis.com>